[package]
name = "dioxus_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["web"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.44.2", features = ["full"] }
paste = "1.0.15"
web-sys = "0.3"
wasm-bindgen = "0.2"
partial_struct= "0.4.5"